updated jest config in package.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,16 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+    "jest": {
+    "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest"
+    },
+    "moduleNameMapping": {
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    },
+    "setupFilesAfterEnv": ["<rootDir>/src/setupTests.js"]
+    },
   "eslintConfig": {
     "extends": [
       "react-app",
